fix: disable sidebar if PerfectScrollbar enable

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -174,6 +174,17 @@
   overflow-x: hidden;
   overflow-y: auto;
   list-style: none;
+
+  &.ps {
+    // Firefox
+    overflow: -moz-scrollbars-none;
+    // IE 10+
+    -ms-overflow-style: none;
+    // Chrome, Edge, Safari, Opera
+    &::-webkit-scrollbar {
+      width: 0 !important;
+    }
+  }
 }
 
 .c-sidebar-nav-title {
